Corrections confusions chiffres SNCF / GIT

--- a/Redaction/Rapport_Final/Rapport.Rmd
+++ b/Redaction/Rapport_Final/Rapport.Rmd
@@ -700,12 +700,13 @@ Ainsi, il existe des mots pour lesquels on ne connaît pas la représentation ve
 Deux options ont été retenues pour traiter ces mots. 
 La première est de retirer ces mots des tweets analysés afin qu'ils n’influent pas sur la décision du sentiment. 
 La seconde est de leur attribuer la valeur du vecteur correspondant aux mots rares (vecteur « lowfrequency », voir partie \@ref(subsec:baseentrainement)) en partant du principe que s'ils sont absents du corpus d'entraînement du modèle \emph{Word2Vec}, ce sont bien des mots très peu fréquents. 
-C’est cette deuxième option qui semble donner des résultats légèrement meilleurs, ce qui peut signifier que l’on capte alors le fait que les mots peu fréquents ne sont en moyenne pas neutres (plutôt positifs ou négatifs\footnote{En utilisant le modèle logit retenu, la prévision d'une \emph{sentence-embedding} composée uniquement du mot « lowfrequency » donne $\widehat{\mathbb{P}}(Y_i = 1 | X_{lowfrequency}) = 0,76$, ce qui laisse supposer que les mots-rares ont une consonance davantage positive.}). 
+C’est cette deuxième option qui semble donner des résultats légèrement meilleurs, ce qui peut signifier que l’on capte alors le fait que les mots peu fréquents ne sont en moyenne pas neutres (plutôt positifs ou négatifs\footnote{En utilisant le modèle logit retenu, la prévision d'une \emph{sentence-embedding} composée uniquement du mot « lowfrequency » donne $\widehat{\mathbb{P}}(Y_i = 1 | X_{lowfrequency}) = 0,87$, ce qui laisse supposer que les mots-rares ont une consonance davantage positive.}). 
 
 \item \textbf{La modélisation probit ou logit}. En plus de comparer leurs AUC, on compare ces deux spécifications avec des critères économétriques (AIC, BIC). C’est le modèle logit qui permet d’obtenir les mêmes résultats, quels que soient les choix faits par ailleurs concernant les mot-vides et les mots inconnus.
 \end{enumerate}
 
-Finalement, nous retenons le modèle estimé par une **régression logit** sur la base en **gardant les mots-vides** et en affectant aux mots inconnus le **vecteur des mots très peu fréquents**. L'*accuracy* de ce modèle est de 68,7 \%^[Cette valeur de l'*accuracy* correspond au seuil $\gamma = 0,5$. Comme dans la partie précédente, nous avons déterminé le seuil optimal et comme celui-ci était très proche de 0,5 ($\gamma^* = 0,051$), pour une *accuracy* de seulement 68,8 \%, nous avons conservé le seuil médian de $0,5$.], valeur inférieure au modèle de référence de la partie \@ref(sec:sentiments) (89,1 \%). 
+Finalement, nous retenons le modèle estimé par une **régression logit** sur la base en **gardant les mots-vides** et en affectant aux mots inconnus le **vecteur des mots très peu fréquents**. L'*accuracy* de ce modèle est de 69,8 \%^[Cette valeur de l'*accuracy* correspond au seuil $\gamma = 0,5$. Comme dans la partie précédente, nous avons déterminé le seuil optimal et comme celui-ci était très proche de 0,5 ($\gamma^* = 0.495$), pour une *accuracy* de seulement 70,0 \%, nous avons conservé le seuil médian de $0,5$.], valeur inférieure au modèle de référence de la partie \@ref(sec:sentiments) (89,1 \%). 
+
 
 ### Les limites des modèles utilisés 
 
@@ -752,13 +753,13 @@ Dans notre cas précis, il s’agit de la différence entre les données de twee
 Modéliser le « domain shift » implique donc d’estimer le passage d’une représentation à une autre en utilisant des informations de distribution\footnote{La correction gamma (représentation paramétrique non linéaire de l’intensité des pixels) est par exemple une manière de pouvoir traiter le « domain shift » lié à l’utilisation d’appareil photos différents.}.
 
 L’idée n’est pas ici de modéliser mathématiquement^[
-Pour modéliser mathématiquement de manière relativement « grossière » un *domain shift*, il s’agirait de considérer par exemple une variable latente « idéale » $x_0$ (une base de tweets de référence), jamais observée mais qui influerait sur $y$ (l’indice mensuel). Nous observons uniquement $x$ telle $x=F(x_0)$ avec $F$ qui représente la transformation de la base de tweets de référence à la base de tweets réellement utilisée, qui peut varier en fonction de la base de données $x$ utilisée. La distribution $P(y|x_0)$ (de  l’indice mensuel sachant le jeu de tweets idéal utilisé) est considérée comme étant la même pour les deux jeux de tweets utilisée (base « sncf » et base de tweets postés en France entre 2013 et 2017). En revanche, cette distribution est modifiée si F est modifiée.] le *domain shift* mais de remarquer que la base de tweets de la SNCF semble en effet qualitativement être une base particulière : de part le vocabulaire spécifique qui y est employé^[Les mots « bus » (3800 occurrences),  « métro » (820), « sncf » (781), , « retard » (411), « ratp » (237), « gare » (195), « chauffeur » (160), … sont parmi les plus employés dans les tweets de la base test.] mais également de part le ton particulièrement ironique de nombreux tweets^[ Comme en témoignent ces deux tweets « 1h de retard la sncf, vous savez pas l’amour que je vous porte » et « J’ai passé 20 superbes minutes dans le RER collé à des gens que je ne connaissais pas ». Par ailleurs parmi les 10 mots qui appartiennent le plus à des tweets mal prédits, 5 peuvent être utilisés pour manier l’ironie (espère, ptdr, cool, mdrr, mdrrr).].
+Pour modéliser mathématiquement de manière relativement « grossière » un *domain shift*, il s’agirait de considérer par exemple une variable latente « idéale » $x_0$ (une base de tweets de référence), jamais observée mais qui influerait sur $y$ (l’indice mensuel). Nous observons uniquement $x$ telle $x=F(x_0)$ avec $F$ qui représente la transformation de la base de tweets de référence à la base de tweets réellement utilisée, qui peut varier en fonction de la base de données $x$ utilisée. La distribution $P(y|x_0)$ (de  l’indice mensuel sachant le jeu de tweets idéal utilisé) est considérée comme étant la même pour les deux jeux de tweets utilisée (base « sncf » et base de tweets postés en France entre 2013 et 2017). En revanche, cette distribution est modifiée si F est modifiée.] le *domain shift* mais de remarquer que la base de tweets de la SNCF semble en effet qualitativement être une base particulière : de part le vocabulaire spécifique qui y est employé^[Les mots « bus » (3800 occurrences),  « métro » (820), « sncf » (781), , « retard » (411), « ratp » (237), « gare » (195), « chauffeur » (160), … sont parmi les plus employés dans les tweets de la base test.] mais également de part le ton particulièrement ironique de nombreux tweets^[ Comme en témoignent ces deux tweets « 1h de retard la sncf, vous savez pas l’amour que je vous porte » et « J’ai passé 20 superbes minutes dans le RER collé à des gens que je ne connaissais pas ». Par ailleurs parmi les 10 mots qui appartiennent le plus à des tweets mal prédits, 4 peuvent être utilisés pour manier l’ironie (rire, mdr, ptdr et mdrrr).].
 
 
 #### Test d'une modification de la source de la base de test 
 
 Nous testé les deux modèles sur une nouvelle base de test de tweets annotés^[Cette base disponible sur github https://github.com/gamebusterz/French-Sentiment-Analysis-Dataset  correspond à 1,5 million de tweets initialement en anglais associés à un sentiment. Son désavantage est que la traduction est de mauvaise qualité et sûrement effectuée depuis un logiciel de traduction automatique.] indépendante des autres bases. 
-Avec cette nouvelle base, l'*accuracy* du modèle basé sur les *word-embedding* est cette fois-ci supérieure à celle de l'approche de référence (68,7 \% contre 55,9 \%).  
+Avec cette nouvelle base, l'*accuracy* du modèle basé sur les *word-embedding* est cette fois-ci supérieure à celle de l'approche de référence (61,9 \% contre 55,9 \%).  
 
 Cette nouvelle base test permet certainement de corriger une partie des biais évoqués plus haut qui pouvaient expliquer la surperformance du modèle de référence par rapport au modèle utilisant les vecteurs mots : 
 
